# linkedin_skill_semantic_transformer

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLIC_REPO_CHECKLIST.md  QUICK_REFERENCE.md  README.md  UPLOAD_SUMMARY.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Linkedin Skill Mapper Gemini Gem/: README.md
Linkedin Skill Mapper Gemini Gem/Knowledge/: linkedin_skills_wordfreq.txt
src/linkedin_skill_semantic_transformer/: download_skills.py  find_relevant_skills.py  main.py
tests/: README.md  conftest.py  test_download_skills.py  test_find_relevant_skills.py  test_main.py
