[project]
name = "linkedin-skill-semantic-transformer"
version = "0.1.0"
description = "Semantic search on LinkedIn skills using Sentence Transformers"
authors = [
    {name = "Omair Khattak",email = "contact@omairkhattak.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "filelock==3.19.1",
    "fsspec==2025.10.0",
    "hf-xet==1.2.0",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "Jinja2==3.1.6",
    "joblib==1.5.3",
    "MarkupSafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "sentence-transformers==5.1.2",
    "six==1.17.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.2.2",
    "tqdm==4.67.1",
    "transformers==4.57.5",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3"
]

[tool.poetry]
packages = [{include = "linkedin_skill_semantic_transformer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
